One sentence in the wrong place

--- a/README.Rmd
+++ b/README.Rmd
@@ -969,7 +969,7 @@ Now that we have these probabilities, we can calculate a new set of pitch contro
 
 ### Combining Pitch Control, Possession Value, and Intent - Example
 
-Another one frame example to give you an idea of how this manifests -
+Another one frame example to give you an idea of how this manifests. From here on, the charts marked outcome are the same set of numbers from the charts in the earlier section and the charts marked intent are the new set of numbers.
 
 ```{r IntentIllustrationData, echo = F}
 
@@ -1342,7 +1342,7 @@ ggplot(dtPVDelta) +
 
 - Most high outcome based `ExpectedAttackMaxDeltaPV` values take a hit when you compare them to the corresponding intent based `ExpectedAttackMaxDeltaPV`. This is expected since a lot of these were near the edges of the pitch or very long passes.
 
-Here are the rest of the distributions with the comparisons. The charts marked outcome are the same as the charts in the earlier section and the charts marked intent are the new set of numbers.
+Here are the rest of the distributions with the comparisons.
 
 ```{r PositiveProportionIntent, echo=FALSE}
 
